--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@angular/platform-server": "^15.2.8",
     "@angular/router": "^15.2.8",
     "@babel/runtime": "7.21.0",
+    "@citation-js/core": "^0.7.9",
     "@kolkov/ngx-gallery": "^2.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.3",
