--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "fast-json-patch": "^3.1.1",
     "filesize": "^6.1.0",
     "highcharts": "10.3.3",
+    "highcharts-angular": "3.1.2",
     "http-proxy-middleware": "^1.0.5",
     "http-terminator": "^3.2.0",
     "isbot": "^3.6.10",
