--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5233,4 +5233,8 @@
   "access-control-option-end-date-note": "Select the date until which the related access condition is applied",
 
   "vocabulary-treeview.search.form.add": "Add",
+
+  "repository.listelement.badge": "Repository",
+
+  "repository.page.titleprefix": "Repository: ",
 }
