--- a/src/themes/nrf/assets/i18n/en.json5
+++ b/src/themes/nrf/assets/i18n/en.json5
@@ -1,4 +1,6 @@
 {
+  "repository.listelement.badge": "Repository",
+  "repository.page.titleprefix": "Repository: ",
 
   "401.help": "You're not authorized to access this page. You can use the button below to get back to the home page.",
 
