--- a/src/assets/i18n/es.json5
+++ b/src/assets/i18n/es.json5
@@ -5223,4 +5223,8 @@
   "home.jumbotron.intro-paragraph": "El Repositorio Institucional se esfuerza por brindar acceso abierto, capturar, almacenar, preservar, indexar y distribuir en formato digital, las investigaciones de las diferentes facultades, departamentos, centros de investigación y otras unidades dedicadas a la investigación de la PUCMM así como ampliar la visibilidad de las investigaciones. a través de redes globales.",
 
   "search.filters.filter.supportedlanguage.head": "Filtros",
+
+  "navbar.home": "Inicio",
+
+  "navbar.aboutUs": "Acerca de",
 }
