--- a/src/themes/pucmm/assets/i18n/en.json5
+++ b/src/themes/pucmm/assets/i18n/en.json5
@@ -1,6 +1,13 @@
 {
   "navbar.home": "Home",
   "navbar.aboutUs": "About Us",
+  "navbar.library": "Library",
+  "navbar.investigation": "Investigation",
+  "navbar.contactUs": "Contact Us",
+  "navbar.institutionalRepository": "Institutional Repository",
+  "navbar.selfArchiving": "Self Archiving",
+  "navbar.licences": "Rights, Licences and Certificates",
+  "navbar.staff": "Staff",
   "repository.listelement.badge": "Repository",
   "repository.page.titleprefix": "Repository: ",
   "home.jumbotron.intro-paragraph": "The Institutional Repository strives to provide open access, capture, store, preserve, index and distribute in digital format, the research of the different faculties, departments, research centers and other units dedicated to research at the PUCMM as well as expand the visibility of research through global networks.",
@@ -1476,7 +1483,7 @@
 
   "dso-selector.set-scope.community.head": "Select a search scope",
 
-  "dso-selector.set-scope.community.button": "Search all of Repository",
+  "dso-selector.set-scope.community.button": "Search Entire Repository",
 
   "dso-selector.set-scope.community.or-divider": "or",
 
@@ -2824,7 +2831,7 @@
 
   "menu.section.browse_community_by_title": "By Title",
 
-  "menu.section.browse_global": "All of Repository",
+  "menu.section.browse_global": "Browse Repository",
 
   "menu.section.browse_global_by_author": "By Author",
 
